# Colemnagrafia

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: vite-pages.yml
crea-explorer/: Cargo.toml
crea-explorer/src/: explore.rs  frequency.rs  generate.rs  main.rs  parser.rs
logo/: logo.js  logo.ts
puzzle-generator/: Cargo.toml
puzzle-generator/src/: lib.rs  puzzles.rs  utils.rs
src/: calendar.ts  controls.ts  displays.ts  hints.ts  lang.ts  listen.ts  logo.ts  main.ts  menu.ts  puzzle.ts  scorebar.ts  styles.css  utils.ts  wheel.ts  word.ts  wordlist.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  palabras.rs  puzzles.rs
src/assets/: puzzles.json
words/src/: lib.rs
