[package]
name = "puzzle-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
thiserror = "1.0.58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unidecode = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_chacha = "0.3.1"
words = { path = "../words" }
